# mermaid-hs

./: .ghcid  README.md  flake.nix  haskell-template.cabal  hie.yaml  mermaid-hs.cabal  test-file
src/: Diagram.hs  FlowChart.hs  GanttChart.hs  Main.hs  Parser.hs
src/Diagram/: FlowChart.hs  GanttChart.hs
src/PrettyPrinter/: FlowChart.hs
test/: FlowChartSpec.hs
