cabal-version:      2.4
name:               mermaid-hs
version:            0.1.0.0
license:            MIT
copyright:          2021 Sridhar Ratnakumar
maintainer:         srid@srid.ca
author:             Sridhar Ratnakumar
category:           Web

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

flag ghcid
    default: False
    manual: True

common ghc-common
  ghc-options:
    -Wall
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns

common library-common
  import: ghc-common
  default-language:   Haskell2010
  build-depends:
    , aeson
    , async
    , base
    , bytestring
    , containers
    , data-default
    , directory
    , filepath
    , lens
    , megaparsec
    , monad-logger
    , mtl
    , neat-interpolation
    , profunctors
    , relude
    , shower
    , tagged
    , text
    , time
    , unliftio
    , with-utf8
    , algebraic-graphs
    , optparse-applicative

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns

  default-extensions:
    FlexibleContexts
    FlexibleInstances
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    ViewPatterns


library
  import: library-common
  hs-source-dirs:     src
  exposed-modules:
    FlowChart
    Parser

test-suite mermaid-hs-test
  import: library-common
  type: exitcode-stdio-1.0
  build-depends:
    hspec
    , mermaid-hs
    , neat-interpolation

  main-is:            Spec.hs
  hs-source-dirs:     test
  if (flag(ghcid))
    hs-source-dirs: src
  else
    build-depends: mermaid-hs
    other-modules:
      FlowChartSpec

executable mermaid-hs
  import: library-common

  main-is:            Main.hs
  hs-source-dirs:     src
  if (flag(ghcid))
    hs-source-dirs: src
  else
    build-depends: mermaid-hs